Barra de progreso e iconos

--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
 <body>
     <header id="main-header" class="bg-dark text-white py-4">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-auto profile">
+            <div class="col d-flex align-items-center">
+                <div class="profile">
                     <img src="images/1659708531328.jpg" alt="Imagen de presentación" class="profile-image">
                 </div>
-                <div class="col">
+                <div>
                     <h1>Brian La Delfa</h1>
-                    <p class="lead">¡Apasionado por la programación ¡Apasionado por la programación¡Apasionado por la programación!</p>
+                    <p class="lead">¡Apasionado por la programación!</p>
+            
+                    <!-- Agregar la barra de progreso aquí -->
+                    <div class="progress career-bar">
+                        <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                            Analista Programador Universitario 75% 
+                        </div>
+                    </div>
                 </div>
             </div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -67,14 +74,40 @@
             </div>
         </div>
     </section>
+
     <section id="habilidades" class="seccion py-5 borde">
         <div class="container">
-            <h2 class="text-center mb-4"><u>Habilidades</u></h2>
+            <h2 class="text-center mb-4"><u>Habilidades y Tecnologias</u></h2>
             <!-- Contenido de habilidades -->
             <p>Me especializo en <strong>desarrollo web</strong> utilizando tecnologías como HTML, CSS, JavaScript y frameworks como Bootstrap. También tengo experiencia en <strong>programación en Java</strong> y <strong>desarrollo de aplicaciones</strong> con React .</p>
-            <p>Me especializo en <strong>desarrollo web</strong> utilizando tecnologías como HTML, CSS, JavaScript y frameworks como Bootstrap. También tengo experiencia en <strong>programación en Java</strong> y <strong>desarrollo de aplicaciones</strong> con React .</p>
+
+            <div class="skills">
+                <figure>
+                    <img src="images/icons8-html-96.png" alt="HTML">
+                    <figcaption>HTML</figcaption>
+                </figure>
+                 <figure>
+                    <img src="images/icons8-css-96.png" alt="CSS">
+                    <figcaption>CSS</figcaption>
+                </figure>
+                 <figure>
+                    <img src="images/icons8-javascript-96.png" alt="JavaScript">
+                    <figcaption>JavaScript</figcaption>
+                </figure>
+                 <figure>
+                    <img src="images/icons8-logotipo-de-java-coffee-cup-94.png" alt="Java">
+                    <figcaption>Java</figcaption>
+                </figure>
+                 <figure>
+                    <img src="images/icons8-sql-96.png" alt="SQL">
+                    <figcaption>SQL</figcaption>
+                </figure>
+                 <figure>
+                    <img src="images/icons8-python-96.png" alt="Python">
+                    <figcaption>Python</figcaption>
+                </figure>
+            </div>
         </div>
-        
     </section>
 
     <section id="sobre-mi" class="seccion py-5 borde">
