--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                     <!-- Agrega el enlace para descargar el currículum -->
                     <div class="text-center">
-                        <a href="https://drive.google.com/file/d/1Ed4yb2Yj9e22-pWqw_UK-YxisndkQYGM/view?usp=drive_link" target="_blank" class="btn btn-primary boton-info">Descargar Currículum</a>
+                        <a href="https://drive.google.com/file/d/13xg-bTENAuYxbj1OxMXoMx5Q-akIV2ir/view?usp=sharing" target="_blank" class="btn btn-primary boton-info">Descargar Currículum</a>
                     </div>
                 </div>
             </div>
