--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="container">
             <h2 class="text-center mb-4"><u>Sobre mí</u></h2>
             <!-- Contenido de sobre mí -->
-            <p>¡Hola! Soy Brian Lautaro La Delfa, estudiante de Analista Programador Universitario e Ingeniería en Computación en proceso de graduación. Con 25 años de edad, mi viaje en el mundo de la tecnología comenzó con una fascinación temprana por entender cómo funcionan las cosas y cómo puedo usar la tecnología para mejorar nuestras vidas.</p>
+            <p>¡Hola! Soy Brian Lautaro La Delfa, estudiante de Analista Programador Universitario e Ingeniería en Computación en proceso de graduación. Tengo 25 años, mi viaje en el mundo de la tecnología comenzó con una fascinación temprana por entender cómo funcionan las cosas y cómo puedo usar la tecnología para mejorar nuestras vidas.</p>
             <p>Durante mi transcurso en la universidad, he adquirido habilidades en el desarrollo de software, desde la codificación hasta la resolución de problemas complejos. Me encanta enfrentarme a nuevos desafíos y aprender constantemente, ya que creo firmemente que el aprendizaje continuo es esencial en este campo en constante evolución.</p>
             <p>Mi enfoque principal se centra en desarrollar soluciones innovadoras y eficientes que aborden las necesidades del usuario y mejoren su experiencia. Disfruto trabajando en equipo y me adapto facilemente.</p>
             <p>Estoy emocionado por lo que el futuro me depara en el campo de la tecnología y estoy ansioso por seguir creciendo personal y profesionalmente. Siempre estoy abierto a nuevas oportunidades y desafíos, así que no dudes en ponerte en contacto conmigo si pensas que puedo contribuir de alguna manera a tu equipo o proyecto.</p>
